objects/Negotiator_2__c/Negotiator_2__c.object-meta.xml
<CustomObject>
    <label>Negotiator 2</label>
    <nameField>
        <label>Negotiator 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Negotiator 2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>