objects/Negotiator_2__c/fields/Additional_Discount_Amt__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount_Amt__c</fullName>
    <label>Additional Discount(Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>