objects/Negotiator_2__c/fields/List_Price1__c.field-meta.xml
<CustomField>
    <fullName>List_Price1__c</fullName>
    <formula>GLobal_List_Price__c + Local_Factor_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>