objects/Negotiator_2__c/fields/Parter_Channel_Discount__c.field-meta.xml
<CustomField>
    <fullName>Parter_Channel_Discount__c</fullName>
    <label>Parter Channel Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>