objects/Negotiator_2__c/fields/Pocket_Price1__c.field-meta.xml
<CustomField>
    <fullName>Pocket_Price1__c</fullName>
    <label>Pocket Price1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>