objects/Negotiator_2__c/fields/Pocket_Price__c.field-meta.xml
<CustomField>
    <fullName>Pocket_Price__c</fullName>
    <formula>Net_Price__c - Freight_Cost__c - Service_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pocket Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>