objects/Negotiator_2__c/fields/Service_Cost__c.field-meta.xml
<CustomField>
    <fullName>Service_Cost__c</fullName>
    <label>Service Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>