objects/Negotiator_2__c/fields/Volume_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Volume_Rebate__c</fullName>
    <label>Volume Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>